--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,39 @@
 {
   "name": "stickly-notes-backend",
   "version": "2.1.0",
+  "description": "Backend para aplicação Stickly Notes",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "jest",
+    "docker:build": "docker build -t stickly-backend .",
+    "docker:run": "docker run -p 3001:3001 stickly-backend"
   },
+  "keywords": ["sticky", "notes", "collaboration", "websocket"],
+  "author": "Stickly Team",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "helmet": "^7.0.0",
     "compression": "^1.7.4",
     "express-rate-limit": "^6.8.1",
+    "express-validator": "^7.0.1",
     "socket.io": "^4.7.2",
     "ioredis": "^5.3.2",
     "pg": "^8.11.3",
     "uuid": "^9.0.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
-    "winston": "^3.10.0",
-    "express-validator": "^7.0.1"
+    "winston": "^3.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1",
+    "jest": "^29.6.2"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
